[package]
name = "asset"
version = "0.1.0"
authors = ["Zakarum <scareaangel@gmail.com>"]
description = "Asset management with support for gfx-hal"
keywords = ["asset", "gfx", "gfx-hal", "gfx-render", "gfx-mesh", "graphics"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/omni-viral/asset.git"
documentation = "https://docs.rs/crate/asset/0.1.0/asset"

[features]
default = []

mesh = ["gfx-hal", "gfx-render", "gfx-mesh"]
texture = ["gfx-hal", "gfx-render"]
fs = []
sprite = []

[dependencies]
derivative = "1.0"
futures = { version = "0.2", optional = true }
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "d8e5d0cc3", optional = true }
gfx-mesh = { git = "https://github.com/omni-viral/gfx-mesh", rev = "1788fe3", optional = true }
gfx-render = { git = "https://github.com/gfx-rs/gfx-render", rev = "d955162", optional = true }
log = "0.4"
obj = { version = "0.8", optional = true }
png = { version = "0.11", optional = true }
ron = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }
failure = { version = "0.1" }

[dev-dependencies]
ron = "0.2"
serde = { version = "1.0" }
